# github-copilot-kanban-with-ai-assistant

./: docker-compose.yml
backend/: Dockerfile  ai.py  db.py  kanban.db  main.py  pyproject.toml  schemas.py  tmp_test.db  uv.toml
backend/data/: kanban.db
backend/tests/: test_ai.py  test_api.py
docs/: PLAN.md  database-schema.md  schema-example.json
frontend/: AGENTS.md  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: KanbanBoard.test.tsx  KanbanBoard.tsx  LoginPage.module.css  LoginPage.test.tsx  LoginPage.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.test.ts  auth.ts  board.test.ts  board.ts
frontend/tests/e2e/: kanban.spec.ts
scripts/: start.bat  start.sh  stop.bat  stop.sh
