# pyproject.toml for FastAPI backend
[project]
name = "kanban-backend"
version = "0.1.0"
description = "FastAPI backend for Kanban MVP"
requires-python = ">=3.11"

[tool.poetry.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
